templates/allow_from_pod_np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netblock
  namespace: default
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: test
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
